--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-3.06MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-170.4KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇸🇬 新加坡-183.3KB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.98MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.95MB/s(Youtube:不良林), server: hk6.ningmengshui.xyz, port: 80, type: vmess, uuid: 0c220535-7e29-42c8-b247-c08aaf8ebc73, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk6.ningmengshui.xyz}}
-  - {name: 🇺🇸 美国-9.93MB/s(Youtube:不良林), server: hk6.ningmengshui.xyz, port: 80, type: vmess, uuid: 1e9f956b-1720-4519-b5c9-333247f6c23f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk6.ningmengshui.xyz}}
-  - {name: 🇫🇷 法国-2.77MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇸🇬 新加坡-2.24MB/s(Youtube:不良林), server: 172.104.182.226, port: 80, type: vmess, uuid: 3849e48e-f276-4612-a1b9-6f07d1ab1bad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /vpngiare.net, ws-headers: {Host: 172.104.182.226}}
-  - {name: 🇺🇸 美国-5.78MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.03MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: f5362b9a-812f-4d77-89a3-09f7d0851bfb, sni: 67us01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.22MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.73MB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11112, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.87MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-479.5KB/s(Youtube:不良林), server: scloud29.jafiyun.life, port: 22029, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud29.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-471.9KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.06MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.14MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
