--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.03MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: f5362b9a-812f-4d77-89a3-09f7d0851bfb, sni: 67us01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.22MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-12.73MB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11112, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.87MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: 104.149.154.154, port: 25966, type: vmess, uuid: ca06e0f0-ca6e-418f-800d-97b23ba51bca, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /VTd4o3Kj/, ws-headers: {Host: 104.149.154.154}}
   - {name: 🇨🇳 中国-479.5KB/s(Youtube:不良林), server: scloud29.jafiyun.life, port: 22029, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud29.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇺🇸 美国-471.9KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.06MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.14MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.08MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇰🇷 韩国-2.50MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.19MB/s(Youtube:不良林), server: 182.160.12.239, port: 45524, type: vmess, uuid: a265dcb2-04a3-48c0-a703-fad0e008d474, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 塞浦路斯-415.1KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇬🇧 英国-8.65MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: 167.88.63.82, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇬🇧 英国-3.22MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 塞浦路斯-415.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-8.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 塞浦路斯-415.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-8.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 塞浦路斯-415.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-8.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 塞浦路斯-415.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-8.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 塞浦路斯-415.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-8.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 塞浦路斯-415.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-8.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-479.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 塞浦路斯-415.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-8.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
